# rust-getter-setter

contract/: Cargo.toml
contract/src/: lib.rs
