[package]
name = "rust-getter-setter"
version = "1.0.0"
authors = ["Nguyen Duc Nhan"]
edition = "2018"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
near-sdk = "4.0.0-pre.7"
uint = { version = "0.8.3", default-features = false }

[dev-dependencies]
near-sdk-sim = "4.0.0-pre.7"

[profile.release]
codegen-units = 1
opt-level = "z"
lto = true
debug = false
panic = "abort"
overflow-checks = true